# ros2code

./: README.md
data_ros2bag/rosbag2_2025_03_28-20_14_03/: metadata.yaml  rosbag2_2025_03_28-20_14_03_0.db3
src/chapt2_1_first_node/: CMakeLists.txt  first_node_cpp.cpp  first_node_py.py
src/chapt2_2_pkg_py/: package.xml  setup.cfg  setup.py
src/chapt2_2_pkg_py/chapt2_2_pkg_py/: node_py.py
src/chapt2_3_pkg_cpp/: CMakeLists.txt  package.xml
src/chapt2_3_pkg_cpp/src/: node_cpp.cpp
src/chapt3_status_display/: CMakeLists.txt  package.xml
src/chapt3_status_display/src/: sys_status_display.cpp
src/chapt3_status_interfaces/: CMakeLists.txt  package.xml
src/chapt3_status_interfaces/msg/: SystemStatus.msg
src/chapt3_status_publisher/: package.xml  setup.cfg  setup.py
src/chapt3_status_publisher/chapt3_status_publisher/: sys_status_pub.py
src/chapt4_cpp_srv/: CMakeLists.txt  package.xml
src/chapt4_cpp_srv/launch/: turtle_patrol.launch.py
src/chapt4_cpp_srv/src/: turtle_control.cpp  turtle_patrol.cpp
src/chapt4_interfaces/: CMakeLists.txt  package.xml
src/chapt4_launch/: CMakeLists.txt  package.xml
src/chapt4_launch/launch/: chapt4_launch.launch.py
src/chapt4_python_srv/: package.xml  setup.cfg  setup.py
src/chapt4_python_srv/chapt4_python_srv/: face_detect_client.py  face_detect_node.py
src/chapt4_python_srv/launch/: face_detect.launch.py
src/chapt5_cpp_tf/: CMakeLists.txt  package.xml
src/chapt5_cpp_tf/src/: cpp_tf_broadcaster.cpp  cpp_tf_broadcaster_s.cpp  cpp_tf_listener.cpp
src/chapt5_python_tf/: package.xml  setup.cfg  setup.py
src/chapt5_python_tf/chapt5_python_tf/: python_tf_broadcaster.py  python_tf_broadcaster_s.py  python_tf_listener.py
